DFT_Fitting/Data/osRPA/dhpbe0/nohup.out
  File "/home/igor/Documents/Package-Pool/Batch_Config/DFT_Fitting/DFT_Fit.py", line 338
    print 'Error in getting grobal environment '+\
                                               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print('Error in getting grobal environment '+\)?
  File "/home/igor/Documents/Package-Pool/Batch_Config/DFT_Fitting/DFT_Fit.py", line 338
    print 'Error in getting grobal environment '+\
                                               ^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print('Error in getting grobal environment '+\)?
Optimization terminated successfully.
         Current function value: 0.007886
         Iterations: 120
         Function evaluations: 212
Optimization terminated successfully.
         Current function value: 0.007368
         Iterations: 120
         Function evaluations: 214
Optimization terminated successfully.
         Current function value: 0.006446
         Iterations: 167
         Function evaluations: 297
Optimization terminated successfully.
         Current function value: 0.005651
         Iterations: 132
         Function evaluations: 240
Optimization terminated successfully.
         Current function value: 0.005651
         Iterations: 135
         Function evaluations: 243
Optimization terminated successfully.
         Current function value: 0.010183
         Iterations: 30
         Function evaluations: 59
Optimization terminated successfully.
         Current function value: 0.006584
         Iterations: 46
         Function evaluations: 87
Optimization terminated successfully.
         Current function value: 0.012599
         Iterations: 55
         Function evaluations: 101
Optimization terminated successfully.
         Current function value: 0.006197
         Iterations: 78
         Function evaluations: 143
Optimization terminated successfully.
         Current function value: 0.011113
         Iterations: 44
         Function evaluations: 86
Optimization terminated successfully.
         Current function value: 0.008349
         Iterations: 125
         Function evaluations: 217
Optimization terminated successfully.
         Current function value: 0.005565
         Iterations: 191
         Function evaluations: 333
Optimization terminated successfully.
         Current function value: 0.005651
         Iterations: 93
         Function evaluations: 163
Optimization terminated successfully.
         Current function value: 0.006445
         Iterations: 99
         Function evaluations: 180
